build/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forya-be
  namespace: forya
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: forya-be
